--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,4 +1,3 @@
 [defaults]
-inventory = hosts.ini
-roles_path = roles
+inventory = /root/ansible/inventories/home/hosts.ini
 host_key_checking = False
