--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,3 +1,4 @@
 [defaults]
-inventory = /root/ansible/inventories/home/hosts.ini
+inventory = ./inventories/home/hosts.ini
+roles_path = ./roles
 host_key_checking = False
